; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_wayland_common.c_touch_handle_up.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_wayland_common.c_touch_handle_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl_touch = type { i32 }
%struct.vo_wayland_state = type { %struct.TYPE_2__*, i64 }
%struct.TYPE_2__ = type { i32 }

@MP_MBTN_LEFT = common dso_local global i32 0, align 4
@MP_KEY_STATE_UP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.wl_touch*, i32, i32, i32)* @touch_handle_up to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @touch_handle_up(i8* %0, %struct.wl_touch* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca %struct.wl_touch*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.vo_wayland_state*, align 8
  store i8* %0, i8** %6, align 8
  store %struct.wl_touch* %1, %struct.wl_touch** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = bitcast i8* %12 to %struct.vo_wayland_state*
  store %struct.vo_wayland_state* %13, %struct.vo_wayland_state** %11, align 8
  %14 = load %struct.vo_wayland_state*, %struct.vo_wayland_state** %11, align 8
  %15 = getelementptr inbounds %struct.vo_wayland_state, %struct.vo_wayland_state* %14, i32 0, i32 1
  store i64 0, i64* %15, align 8
  %16 = load %struct.vo_wayland_state*, %struct.vo_wayland_state** %11, align 8
  %17 = getelementptr inbounds %struct.vo_wayland_state, %struct.vo_wayland_state* %16, i32 0, i32 0
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @MP_MBTN_LEFT, align 4
  %22 = load i32, i32* @MP_KEY_STATE_UP, align 4
  %23 = or i32 %21, %22
  %24 = call i32 @mp_input_put_key(i32 %20, i32 %23)
  ret void
}

declare dso_local i32 @mp_input_put_key(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
